# PMFlow

./: COGNITIVE_FRAMEWORK_SUMMARY.md  README.md  STATUS.md  all_formulas_fixed.tex  pyproject.toml
docs/: PMFLOW_LM.md  cognitive_architecture.md
examples/: cognitive_agent_demo.py  demo_agentic_physics.py  simple_example.py  train_pmflow_lm.py
pmflow/: __init__.py  cognitive.py  encoder.py  pmflow.py
pmflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pmflow/bnn/: bnn.py
pmflow/core/: contrastive.py  pmflow.py  retrieval.py
pmflow/lm/: __init__.py  pmflow_lm.py  train.py
pmflow/utils/: evaluation.py
tests/: test_basic.py  test_encoder.py  test_flow_physics.py
